debug: mudança na interface para testes

--- a/marketplace.html
+++ b/marketplace.html
@@ -68,12 +68,12 @@
 
 
 
-    <main>
+    <main style="min-height: 80vh;">
         <div class="container">
             <section class="products-section">
                 <h2>Anúncios da Comunidade</h2>
-                <div id="ads-list" class="product-grid" data-testid="marketplace-grid">
-                    <p>Carregando anúncios...</p>
+                <div id="ads-list" style="width: 100%; min-height: 200px;">
+                    <p style="text-align: center;">Carregando anúncios...</p>
                 </div>
             </section>
         </div>
