--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-commerce TCC</title>
+    <title>LanternFox</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
@@ -10,7 +10,7 @@
 <div class="scroll-indicator-bar"></div>
 <header class="main-header">
     <div class="container header-container">
-        <a href="index.html" class="logo gradient-text">LanternFox</a>
+        <a href="index.html" class="logo"><img src="images/logo.png" alt="Ícone da LanternFox"><span class="logo-text gradient-text">LanternFox</span></a>
         
         <!-- O menu de navegação principal -->
         <nav class="main-nav" id="primary-navigation">
