fix: pequena correção da barra de busca

--- a/busca.html
+++ b/busca.html
@@ -56,7 +56,7 @@
             <select id="category-filter">
                 <option value="all">Todas as Categorias</option>
                 <option value="Processador">Processadores</option>
-                <option value="Placa de Vídeo">Placas de Vídeo</option>
+                <option value="Placas de Vídeo">Placas de Vídeo</option>
                 <option value="Memória RAM">Memória RAM</option>
                 <option value="Periféricos">Periféricos</option>
             </select>
