fix: correção na página de meus anúncios.

--- a/meus-anuncios.html
+++ b/meus-anuncios.html
@@ -68,14 +68,14 @@
 
   
 
-    <main>
+    <main style="min-height: 80vh;">
         <div class="container">
             <section class="products-section">
                 <div class="page-header">
                     <h2>Meus Anúncios</h2>
                     <a href="criar-anuncio.html" class="button">Criar Novo Anúncio</a>
                 </div>
-                <div id="my-ads-list" class="product-grid">
+                <div id="my-ads-list" style="width: 100%; min-height: 200px;">
                     <!-- Anúncios do usuário serão inseridos aqui -->
                 </div>
             </section>
