--- a/meus-anuncios.html
+++ b/meus-anuncios.html
@@ -75,7 +75,7 @@
                     <h2>Meus Anúncios</h2>
                     <a href="criar-anuncio.html" class="button">Criar Novo Anúncio</a>
                 </div>
-                <div id="my-ads-list" style="width: 100%; min-height: 200px;">
+                <div id="my-ads-list" class="product-grid">
                     <!-- Anúncios do usuário serão inseridos aqui -->
                 </div>
             </section>
