--- a/checkout.html
+++ b/checkout.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LanternFox</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-enhancements.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
+<div class="scroll-indicator-bar"></div>
 <header class="main-header">
     <div class="container header-container">
         <a href="index.html" class="logo"><img src="images/logo.png" alt="Ícone da LanternFox"><span class="logo-text gradient-text">LanternFox</span></a>
