--- a/marketplace.html
+++ b/marketplace.html
@@ -6,6 +6,7 @@
     <title>LanternFox</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-enhancements.css">
 </head>
 <body>
 <div class="scroll-indicator-bar"></div>    
